--- a/library-spring-data-mongo-mvc-auth-url/src/main/resources/application.yml
+++ b/library-spring-data-mongo-mvc-auth-url/src/main/resources/application.yml
@@ -14,3 +14,11 @@ management:
 mongock:
   change-logs-scan-package:
     - ru.otus.library.changelogs
+logging:
+  file:
+    name: logs/library.log
+  logback:
+    rollingpolicy:
+      max-file-size: 5MB
+  level:
+    root: DEBUG
