--- a/library-spring-data-mongo-mvc-auth-url/pom.xml
+++ b/library-spring-data-mongo-mvc-auth-url/pom.xml
@@ -93,6 +93,32 @@
                     </excludes>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>com.google.cloud.tools</groupId>
+                <artifactId>jib-maven-plugin</artifactId>
+                <version>3.3.1</version>
+                <configuration>
+                    <from>
+                        <image>bellsoft/liberica-openjdk-alpine:11</image>
+                    </from>
+                    <to>
+                        <image>book-library</image>
+                    </to>
+                    <container>
+                        <ports>
+                            <port>8080</port>
+                        </ports>
+                    </container>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>dockerBuild</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 
