--- a/library-spring-data-mongo-mvc-auth-url/src/main/resources/application.yml
+++ b/library-spring-data-mongo-mvc-auth-url/src/main/resources/application.yml
@@ -22,3 +22,9 @@ logging:
       max-file-size: 5MB
   level:
     root: INFO
+spring:
+  data:
+    mongodb:
+      database: library
+      port: 27017
+      uri: mongodb://localhost
