--- a/library-spring-data-mongo-mvc-auth-url/docker-compose.yml
+++ b/library-spring-data-mongo-mvc-auth-url/docker-compose.yml
@@ -2,8 +2,14 @@ version: '1'
 services:
   book-library:
     image: "book-library"
+    depends_on:
+      - mongo
     ports:
       - "8080:8080"
+    environment:
+      - SPRING_DATA_MONGODB_DATABASE=library_docker
+      - SPRING_DATA_MONGODB_URI=mongodb://mongo
+      - SPRING_DATA_MONGODB_PORT=27017
     networks:
       - nw
   mongo:
