--- a/library-spring-data-mongo-mvc-auth-url/src/main/resources/application.yml
+++ b/library-spring-data-mongo-mvc-auth-url/src/main/resources/application.yml
@@ -28,3 +28,10 @@ spring:
       database: library
       port: 27017
       uri: mongodb://localhost
+hystrix:
+  command:
+    default:
+      execution:
+        isolation:
+          thread:
+            timeoutInMilliseconds: 7000
