--- a/library-spring-data-mongo-mvc-auth-url/pom.xml
+++ b/library-spring-data-mongo-mvc-auth-url/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>ru.otus</groupId>
     <artifactId>library</artifactId>
-    <version>2.1</version>
+    <version>2.2</version>
     <name>library-spring-data-mongo-mvc-auth-url</name>
     <description>Book library</description>
     <properties>
@@ -77,7 +77,25 @@
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
+            <version>2.2.7.RELEASE</version>
+        </dependency>
     </dependencies>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>2021.0.3</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+
+        </dependencies>
+    </dependencyManagement>
+
 
     <build>
         <plugins>
